--- a/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
@@ -77,8 +77,8 @@
                                                          </div>
                                                          
                                                           <div th:unless="${#request.remoteUser}">
-                                                           <li> <a th:text="${#request.remoteUser}" class="nav-link dropdown" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-												          
+                                                           <li> <a class="nav-link dropdown" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+												                   My Account
 												        </a>
 												        <ul class="dropdown-menu">
 												          <li><a href="/login" title="Login">Login</a></li>
