--- a/Normal_DATN/src/main/resources/templates/taiKhoan/login.html
+++ b/Normal_DATN/src/main/resources/templates/taiKhoan/login.html
@@ -34,7 +34,7 @@
 						 <div class="forgot">
 						 
 						 
-						 	<h6>  <a href="/register">Đăng ký</a><a> || </a><a href="/fogetPass">Quên mật khẩu?</a></h6>
+						 	<h6>  <a href="/dk">Đăng ký</a><a> || </a><a href="/fogetPass">Quên mật khẩu?</a></h6>
 						 </div>
 						<div class="clear" > </div>
 					  </div>
