--- a/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
@@ -662,8 +662,8 @@
                                         </div>
                                         <div class="row">
                                             <div class="product_active owl-carousel">
-                                                <div class="col-lg-3">
-                                              <c:forEach var="HoLy" items="${item}"> 
+                                                <div th:each="HoLy:${item}"  class="col-lg-3">
+                                             
                                                     <div class="single_product">
                                                         <div class="product_thumb">
                                                            <a href="single-product.html"><img src="assets\img\product\product1.jpg" alt=""></a> 
@@ -675,8 +675,8 @@
                                                            </div>
                                                         </div>
                                                         <div class="product_content">
-                                                            <span class="product_price">$50.00</span>
-                                                            <h3 class="product_title"><a href="#"></a></h3>
+                                                            <span class="product_price">[[${HoLy.price}]]</span>
+                                                            <h3 class="product_title"><a href="#">[[${HoLy.name}]]</a></h3>
                                                         </div>
                                                         <div class="product_info">
                                                             <ul>
@@ -685,7 +685,7 @@
                                                             </ul>
                                                         </div>
                                                     </div>
-                                                </c:forEach> 
+                                              
                                                 </div>
                                                 <div class="col-lg-3">
                                                     <div class="single_product">
