--- a/Normal_DATN/src/main/resources/templates/taiKhoan/MaOTP.html
+++ b/Normal_DATN/src/main/resources/templates/taiKhoan/MaOTP.html
@@ -2,10 +2,10 @@
 <html xmlns= "http://www.thymeleaf.org">
 <head>
 <title>Đăng nhập</title>
-<script src="/js/jquery.min.js"></script>
+<script src="assets/js/jquery.min.js"></script>
 
 <!-- Custom Theme files -->
-<link href="/css/styleLogin.css" rel="stylesheet" type="text/css" media="all"/>
+<link href="assets/css/styleLogin.css" rel="stylesheet" type="text/css" media="all"/>
 <!-- for-mobile-apps -->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
