--- a/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
@@ -671,7 +671,7 @@
                                                                <img src="assets\img\cart\span-new.png" alt="">
                                                            </div>
                                                            <div class="product_action">
-                                                               <a href="#"> <i class="fa fa-shopping-cart"></i> Add to cart</a>
+                                                               <a th:href="@{|/addCart/${HoLy.id}|}"> <i class="fa fa-shopping-cart"></i> Add to cart</a>
                                                            </div>
                                                         </div>
                                                         <div class="product_content">
@@ -680,7 +680,7 @@
                                                         </div>
                                                         <div class="product_info">
                                                             <ul>
-                                                                <li><a href="#" title=" Add to Wishlist ">Add to Wishlist</a></li>
+                                      
                                                                 <li><a href="#" data-toggle="modal" data-target="#modal_box" title="Quick view">View Detail</a></li>
                                                             </ul>
                                                         </div>
@@ -695,7 +695,7 @@
                                                                <img src="assets\img\cart\span-hot.png" alt="">
                                                            </div>
                                                            <div class="product_action">
-                                                               <a href="#"> <i class="fa fa-shopping-cart"></i> Add to cart</a>
+                                                               <a > <i class="fa fa-shopping-cart"></i> Add to cart</a>
                                                            </div>
                                                         </div>
                                                         <div class="product_content">
