upload layout for basic funtion

--- a/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
@@ -18,9 +18,9 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="pages/forms/general.html"><i class="fa fa-circle-o"></i>User Manager</a></li>
-            <li><a href="pages/forms/advanced.html"><i class="fa fa-circle-o"></i>Product Manager</a></li>
-            <li><a href="pages/forms/editors.html"><i class="fa fa-circle-o"></i>Category Manager</a></li>
+            <li><a th:href="@{user}"><i class="fa fa-circle-o"></i>User Manager</a></li>
+            <li><a th:href="@{product}"><i class="fa fa-circle-o"></i>Product Manager</a></li>
+            <li><a th:href="@{category}"><i class="fa fa-circle-o"></i>Category Manager</a></li>
           </ul>
         </li>
         
