--- a/Normal_DATN/src/main/resources/templates/Admin/components/content.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/content.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 </head>
 <body >
@@ -16,6 +17,7 @@
         <li class="active">Dashboard</li>
       </ol>
     </section>
+    <div layout:fragment="contentChanges"></div>
   </div>
 </body>
 </html>
