thử nghiệm với ajax live data, đang làm

--- a/Normal_DATN/src/main/resources/templates/Admin/components/header.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/header.html
@@ -95,7 +95,7 @@
 <script th:src="@{/AdminAssets/dist/js/pages/dashboard.js}"></script>
 <!-- AdminLTE for demo purposes -->
 <script th:src="@{/AdminAssets/dist/js/demo.js}"></script>
-
+<script th:src="@{/AdminAssets/dist/customCategory.js}"></script>
 </div>
 </body>
 </html>
