--- a/Normal_DATN/src/main/resources/templates/Admin/page/category.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/category.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	  xmlns:th="http://www.thymeleaf.org"
       layout:decorate="~{Admin/components/header}">
 <body>
 <div layout:fragment ="contentChanges">
@@ -183,6 +184,5 @@
 		</div>
 	</section>
 </div>
-
 </body>
 </html>
