tiếp tục bí cmn. Chết tiệt

--- a/Normal_DATN/src/main/resources/templates/Admin/components/header.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/header.html
@@ -96,6 +96,7 @@
 <!-- AdminLTE for demo purposes -->
 <script th:src="@{/AdminAssets/dist/js/demo.js}"></script>
 <script th:src="@{/AdminAssets/dist/customCategory.js}"></script>
+<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
 </div>
 </body>
 </html>
