--- a/Normal_DATN/src/main/resources/templates/Admin/page/category.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/category.html
@@ -19,7 +19,7 @@
               <div class="box-body">
                 <div class="form-group">
                   <label for="exampleInputPassword1">Category Name</label>
-                  <input type="text" class="form-control" name="nameCategory" placeholder="Insert name category">
+                  <input type="text" class="form-control" id="nameCategory" placeholder="Insert name category">
                 </div>
               </div>
               <!-- /.box-body -->
