--- a/Normal_DATN/src/main/resources/templates/taiKhoan/ChangePass.html
+++ b/Normal_DATN/src/main/resources/templates/taiKhoan/ChangePass.html
@@ -32,7 +32,11 @@
 		<input type="password"name="password" th:value="${password}" placeholder="Password cũ"/>			
 		<input type="password"name="passwordMoi" th:value="${password}" placeholder="Password mới"/>			   
 		<input type="password"name="passwordXN" th:value="${password}" placeholder="Xác nhận lại Password"/>
-			   
+			<div class="forgot">
+							<h6>  <a href="/login">Đăng nhập</a></h6>
+						 </div>
+						 <br><br><br>
+						 
 	<input type="submit" value="Gửi">
   </form>	
 					
