--- a/Normal_DATN/src/main/resources/templates/taiKhoan/EditProfile.html
+++ b/Normal_DATN/src/main/resources/templates/taiKhoan/EditProfile.html
@@ -31,7 +31,11 @@
 		<input type="text"name="username" th:value="${username}" placeholder="Username"readonly/>
 		<input type="password"name="password" th:value="${pass}" placeholder="Password"/>			
 		<input type="text"name="fullname" th:value="${fullname}" placeholder="Username"/>
-		<input type="text"name="email" th:value="${email}" placeholder="Email"/>	   
+		<input type="text"name="email" th:value="${email}" placeholder="Email"/>	
+		<div class="forgot">
+							<h6>  <a href="/login">Đăng nhập</a></h6>
+						 </div>
+						 <br><br><br>
 	<input type="submit" value="Gửi">
   </form>	
 					
