--- a/Normal_DATN/src/main/resources/templates/taiKhoan/FogetPass.html
+++ b/Normal_DATN/src/main/resources/templates/taiKhoan/FogetPass.html
@@ -36,7 +36,10 @@
 							  
 						
 						
-					   
+			<div class="forgot">
+							<h6>  <a href="/login">Đăng nhập</a></h6>
+						 </div>
+						 <br><br><br>		   
 	<input type="submit" value="Gửi">
   </form>	
 					
