--- a/Normal_DATN/src/main/resources/templates/taiKhoan/SignUp.html
+++ b/Normal_DATN/src/main/resources/templates/taiKhoan/SignUp.html
@@ -35,7 +35,7 @@
 						<input type="password"name="NLpassword" placeholder="Nhập lại Password"/>
 						<i style="color:red"th:errors="*{fullname}"></i>
 						<input th:field="*{fullname}"type="text"name="fullname" placeholder="Nhập FullName"/>
-						<i style="color:red"th:errors="*{Email}"></i>
+						<i style="color:red"th:errors="*{email}"></i>
 						<i style="color:red"th:text="${ktEmail}"></i>
 						<input th:field="*{Email}"type="text"name="email" placeholder="Nhập Email"/>
 	   
