gio hang chua xong

--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -43,12 +43,6 @@
                                                         </ul>   
                                                     </li> 
 
-                                                    <li class="currency"><a href="#"> Currency : $ <i class="fa fa-angle-down"></i></a>
-                                                        <ul class="dropdown_currency">
-                                                            <li><a href="#"> Dollar (USD)</a></li>
-                                                            <li><a href="#"> Euro (EUR)  </a></li>
-                                                        </ul> 
-                                                    </li> 
                                                 </ul>
                                             </div>
                                         </div>
@@ -56,8 +50,7 @@
                                             <div class="header_links">
                                                 <ul>
                                                     <li><a href="contact.html" title="Contact">Contact</a></li>
-                                                    <li><a href="wishlist.html" title="wishlist">My wishlist</a></li>
-                                                   <li><a href="cart.html" title="My cart">My cart</a></li>
+                                                   <li><a th:href="@{/cart}" title="My cart">My cart</a></li>
                                                   
                                                     
                                                        
@@ -120,49 +113,8 @@
                                                     </form>
                                                 </div>
                                                 <div class="shopping_cart">
-                                                    <a href="#"><i class="fa fa-shopping-cart"></i> 2Items - $209.44 <i class="fa fa-angle-down"></i></a>
-
-                                                    <!--mini cart-->
-                                                    <div class="mini_cart">
-                                                        <div class="cart_item">
-                                                           <div class="cart_img">
-                                                               <a href="#"><img src="assets\img\cart\cart.jpg" alt=""></a>
-                                                           </div>
-                                                            <div class="cart_info">
-                                                                <a href="#">lorem ipsum dolor</a>
-                                                                <span class="cart_price">$115.00</span>
-                                                                <span class="quantity">Qty: 1</span>
-                                                            </div>
-                                                            <div class="cart_remove">
-                                                                <a title="Remove this item" href="#"><i class="fa fa-times-circle"></i></a>
-                                                            </div>
-                                                        </div>
-                                                        <div class="cart_item">
-                                                           <div class="cart_img">
-                                                               <a href="#"><img src="assets\img\cart\cart2.jpg" alt=""></a>
-                                                           </div>
-                                                            <div class="cart_info">
-                                                                <a href="#">Quisque ornare dui</a>
-                                                                <span class="cart_price">$105.00</span>
-                                                                <span class="quantity">Qty: 1</span>
-                                                            </div>
-                                                            <div class="cart_remove">
-                                                                <a title="Remove this item" href="#"><i class="fa fa-times-circle"></i></a>
-                                                            </div>
-                                                        </div>
-                                                        <div class="shipping_price">
-                                                            <span> Shipping </span>
-                                                            <span>  $7.00  </span>
-                                                        </div>
-                                                        <div class="total_price">
-                                                            <span> total </span>
-                                                            <span class="prices">  $227.00  </span>
-                                                        </div>
-                                                        <div class="cart_button">
-                                                            <a href="checkout.html"> Check out</a>
-                                                        </div>
-                                                    </div>
-                                                    <!--mini cart end-->
+                                                    <a th:href="@{/cart}"><i class="fa fa-shopping-cart"></i> 2Items - $209.44 <i class="fa fa-angle-down"></i></a>
+->
                                                 </div>
 
                                             </div>
