--- a/Normal_DATN/src/main/resources/templates/Admin/components/header.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/header.html
@@ -97,6 +97,7 @@
 <script th:src="@{/AdminAssets/dist/js/demo.js}"></script>
 <script th:src="@{/AdminAssets/dist/customCategory.js}"></script>
 <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap.min.js"></script>
 </div>
 </body>
 </html>
