--- a/Normal_DATN/src/main/resources/templates/Admin/page/category.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/category.html
@@ -1,66 +1,83 @@
 
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	  xmlns:th="http://www.thymeleaf.org"
-      layout:decorate="~{Admin/components/header}">
+	xmlns:th="http://www.thymeleaf.org"
+	layout:decorate="~{Admin/components/header}">
 <body>
-<div layout:fragment ="contentChanges">
-	<section class="content">
-		<div class="row">
-			<div class="col-md-12">
-          <!-- general form elements -->
-          <div class="box box-primary">
-            <div class="box-header with-border">
-              <h3 class="box-title">Category Manager</h3>
-            </div>
-            <!-- /.box-header -->
-            <!-- form start -->
-            <form role="form">
-              <div class="box-body">
-                <div class="form-group">
-                  <label for="exampleInputPassword1">Category Name</label>
-                  <input type="text" class="form-control" id="nameCategory" placeholder="Insert name category">
-                </div>
-              </div>
-              <!-- /.box-body -->
-              <div class="box-footer">
-                <button type="button" class="btn btn-primary" id="submitCategory">Submit</button>
-              </div>
-            </form>
-            
-     
-          </div>
-  		<div class="box">
-            <div class="box-header">
-              <h3 class="box-title">Hover Data Table</h3>
-            </div>
-            <!-- /.box-header -->
-            <div class="box-body">
-              <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"></div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12">
-              <table id="tableCategory1" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
-                <thead>
-                <tr role="row">
-                <th class="sorting_asc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending">ID Category</th>
-                <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending">Name Category</th>
-                </tr>
-                </thead>
-                <tbody id="tableCategory">
-               
-                </tbody>
-                <tfoot>
-                </tfoot>
-              </table>
-              </div>
-              </div>
-              <div class="row">
-              <div class="col-sm-5">
-              <div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div></div><div class="col-sm-7"><div class="dataTables_paginate paging_simple_numbers" id="example2_paginate"><ul class="pagination"><li class="paginate_button previous disabled" id="example2_previous"><a href="#" aria-controls="example2" data-dt-idx="0" tabindex="0">Previous</a></li><li class="paginate_button active"><a href="#" aria-controls="example2" data-dt-idx="1" tabindex="0">1</a></li><li class="paginate_button "><a href="#" aria-controls="example2" data-dt-idx="2" tabindex="0">2</a></li><li class="paginate_button "><a href="#" aria-controls="example2" data-dt-idx="3" tabindex="0">3</a></li><li class="paginate_button "><a href="#" aria-controls="example2" data-dt-idx="4" tabindex="0">4</a></li><li class="paginate_button "><a href="#" aria-controls="example2" data-dt-idx="5" tabindex="0">5</a></li><li class="paginate_button "><a href="#" aria-controls="example2" data-dt-idx="6" tabindex="0">6</a></li><li class="paginate_button next" id="example2_next"><a href="#" aria-controls="example2" data-dt-idx="7" tabindex="0">Next</a></li></ul></div></div></div></div>
-            </div>
-            <!-- /.box-body -->
-          </div>
-        </div>
-		</div>
-	</section>
-</div>
+	<div layout:fragment="contentChanges">
+		<section class="content">
+			<div class="row">
+				<div class="col-md-12">
+					<!-- general form elements -->
+					<div class="box box-primary">
+						<div class="box-header with-border">
+							<h3 class="box-title">Category Manager</h3>
+						</div>
+						<!-- /.box-header -->
+						<!-- form start -->
+						<form role="form">
+							<div class="box-body">
+								<div class="form-group">
+									<label for="exampleInputPassword1">Category Name</label> <input
+										type="text" class="form-control" id="nameCategory"
+										placeholder="Insert name category">
+								</div>
+							</div>
+							<!-- /.box-body -->
+							<div class="box-footer">
+								<button type="button" class="btn btn-primary"
+									id="submitCategory">Submit</button>
+							</div>
+						</form>
+
+
+					</div>
+					<div class="box">
+						<div class="box-header">
+							<h3 class="box-title">Hover Data Table</h3>
+						</div>
+						<!-- /.box-header -->
+						<div class="box-body">
+							<div id="example2_wrapper"
+								class="dataTables_wrapper form-inline dt-bootstrap">
+								<div class="row">
+									<div class="col-sm-6"></div>
+									<div class="col-sm-6"></div>
+								</div>
+								<div class="row">
+									<div class="col-sm-12">
+										<table id="tableCategory"
+											class="table table-bordered table-hover dataTable"
+											role="grid" aria-describedby="example2_info">
+											<thead>
+												<tr role="row">
+													<th class="sorting_asc" tabindex="0"
+														aria-controls="example2" rowspan="1" colspan="1"
+														aria-sort="ascending"
+														aria-label="Rendering engine: activate to sort column descending">ID
+														Category</th>
+													<th class="sorting" tabindex="0" aria-controls="example2"
+														rowspan="1" colspan="1"
+														aria-label="Browser: activate to sort column ascending">Name
+														Category</th>
+												</tr>
+											</thead>
+											<tbody>
+
+											</tbody>
+											<tfoot>
+											</tfoot>
+										</table>
+									</div>
+								</div>
+								
+							</div>
+						</div>
+						<!-- /.box-body -->
+					</div>
+				</div>
+			</div>
+		</section>
+	</div>
 </body>
 </html>
