--- a/Normal_DATN/src/main/resources/templates/Admin/page/category.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/category.html
@@ -9,6 +9,9 @@
 			<div class="row">
 				<div class="col-md-12">
 					<!-- general form elements -->
+					<div id="message">
+               
+             		 </div>
 					<div class="box box-primary">
 						<div class="box-header with-border">
 							<h3 class="box-title">Category Manager</h3>
@@ -29,7 +32,7 @@
 									id="submitCategory">Submit</button>
 							</div>
 						</form>
-
+						
 
 					</div>
 					<div class="box">
