--- a/Normal_DATN/src/main/resources/templates/taiKhoan/EditProfile.html
+++ b/Normal_DATN/src/main/resources/templates/taiKhoan/EditProfile.html
@@ -31,6 +31,7 @@
 		<input type="text"name="username" th:value="${username}" placeholder="Username"readonly/>
 		<input type="password"name="password" th:value="${pass}" placeholder="Password"/>			
 		<input type="text"name="fullname" th:value="${fullname}" placeholder="Username"/>
+		<input type="text"name="phone" th:value="${phone}" placeholder="Phone"/>
 		<input type="text"name="email" th:value="${email}" placeholder="Email"/>	
 		<div class="forgot">
 							<h6>  <a href="/login">Đăng nhập</a></h6>
