gần xong đặt hàng

--- a/Normal_DATN/src/main/resources/templates/nguoiDung/cart.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/cart.html
@@ -107,10 +107,10 @@
 
                                                        <div class="cart_subtotal">
                                                            <p>Total</p>
-                                                           <p class="cart_amount">£215.00</p>
+                                                           <p class="cart_amount">[[${tongTien}*1]]</p>
                                                        </div>
                                                        <div class="checkout_btn">
-                                                           <a href="#">Proceed to Checkout</a>
+                                                           <a th:href="@{/checkout}">Proceed to Checkout</a>
                                                        </div>
                                                     </div>
                                                 </div>
