--- a/Normal_DATN/src/main/resources/templates/nguoiDung/checkout.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/checkout.html
@@ -37,13 +37,13 @@
                             <div class="checkout_form">
                                     <div class="row">
                                         <div class="col-lg-4 col-md-6">
-                                            <form action="#">
+                                            <form th:action="@{/addOrder}" mehtod="post" >
                                                 <h3>Billing Details</h3>
                                                 <div class="row">
-                                                <input type="hidden" th:value="${tongTien}" >  
+                                                <input type="hidden" name="amount"  th:value="${tongTien}" >  
                                                     <div class="col-12 mb-30">
                                                         <label>User Name <span>*</span></label>
-                                                        <input type="text" th:value="${acc.id}" readonly>    
+                                                        <input type="text" name="user" th:value="${acc.id}" readonly>    
                                                     </div>
                                            <!--        <div class="col-lg-6 mb-30">
                                                         <label>Last Name  <span>*</span></label>
@@ -70,25 +70,26 @@
                                
                                                     <div class="col-lg-6 mb-30">
                                                         <label>Phone<span>*</span></label>
-                                                        <input type="text"> 
+                                                        <input name="phone" type="text"> 
 
                                                     </div> 
                                                      <div class="col-lg-6 mb-30">
                                                         <label> Email <span>*</span></label>
-                                                          <input type="text" th:value="${acc.email}" readonly> 
+                                                          <input type="text" name="email" th:value="${acc.email}" readonly> 
 
                                                     </div> 
                                                           <div class="col-12 mb-30">
                                                         <label>Address  <span>*</span></label>
-                                                        <input placeholder="House number and street name" type="text">     
+                                                        <input placeholder="House number and street name" name="address" type="text">     
                                                     </div>
      
                                                     <div class="col-12">
                                                         <div class="order-notes">
                                                              <label for="order_note">Order Notes</label>
-                                                            <textarea id="order_note" placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
+                                                            <textarea id="order_note" name="description" placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
                                                         </div>    
-                                                    </div>     	    	    	    	    	    	    
+                                                    </div>   
+                                                     <input type="text" name="status"  >    	    	    	    	    	    	    
                                                 </div>
                                                             <div class="payment_method">
                                                    <div class="panel-default">
