--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -75,14 +75,14 @@
 												                   My Account
 												        </a>
 												        <ul class="dropdown-menu">
-												          <li><a href="/login" title="Login">Login</a></li>
-												           <li><a class="dropdown-item" href="dk">Register</a></li>
+												          <li><a th:href="@{/login}" title="Login">Login</a></li>
+												           <li><a class="dropdown-item" th:href="@{/dk}">Register</a></li>
 												           <li><a class="dropdown-item" href="/fogetPass">Forgot password</a></li>
 												          <li th:if="${#request.isUserInRole('ADMIN')}">
                                       	                         <a th:href="@{/admin/accounts}">Administration</a>
                                                                        </li>
-												          <li><hr class="dropdown-divider"></li>
-												          <li><a class="dropdown-item" th:href="@{/security/logout}">Logout</a></li>
+												      
+					
 												        </ul>
 												      </li>
                                                          
@@ -100,7 +100,7 @@
                                        <!--logo start-->
                                         <div class="col-lg-3 col-md-3">
                                             <div class="logo">
-                                                <a href="index.html"><img src="assets\img\logo\logo.jpg.png" alt=""></a>
+                                                <a th:href="@{/index}"><img src="assets\img\logo\logo.jpg.png" alt=""></a>
                                             </div>
                                         </div>
                                         <!--logo end-->
@@ -113,8 +113,6 @@
                                                     </form>
                                                 </div>
                                                 <div class="shopping_cart">
-                                                    <a th:href="@{/cart}"><i class="fa fa-shopping-cart"></i> 2Items - $209.44 <i class="fa fa-angle-down"></i></a>
-->
                                                 </div>
 
                                             </div>
@@ -129,14 +127,9 @@
                                                 <div class="main_menu d-none d-lg-block">
                                                     <nav>
                                                         <ul>
-                                                            <li class="active"><a href="index.html">Home</a>
+                                                            <li class="active"><a th:href="@{/index}">Home</a>
                                                                 <div class="mega_menu jewelry">
-                                                                    <div class="mega_items jewelry">
-                                                                        <ul>
-                                                                            <li><a href="index.html">Home 1</a></li>
-                                                                            <li><a href="index-2.html">Home 2</a></li>
-                                                                        </ul>
-                                                                    </div>
+                                                         
                                                                 </div> 
                                                             </li>
                                                             <li><a href="shop.html">shop</a>
