--- a/Normal_DATN/src/main/resources/templates/Admin/page/user.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/user.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{Admin/components/header}">
@@ -14,38 +13,48 @@
             </div>
             <!-- /.box-header -->
             <!-- form start -->
-            <form role="form">
+            
+            <form action="/admin/user/add" method="POST" th:object="${acc}">
               <div class="box-body">
+               
                 <div class="form-group">
                   <label for="exampleInputEmail1">Username</label>
-                  <input type="texr" class="form-control" id="exampleInputEmail1" placeholder="Enter Username">
+                   <i style="color:red" th:errors="*{id}"></i>
+                  <i style="color:red" th:text="${user}"></i>
+                  <input th:field="*{id}" type="text" class="form-control" placeholder="Enter Username">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter Password">
+                  <i style="color:red"th:errors="*{password}"></i>
+                  <input th:field="*{password}" type="password" class="form-control" placeholder="Enter Password">
                 </div>
                <div class="form-group">
                   <label for="exampleInputPassword1">FullName</label>
-                  <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Enter FullName">
+                   <i style="color:red"th:errors="*{fullname}"></i>
+                  <input th:field="*{fullname}" type="text" class="form-control" placeholder="Enter FullName">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">Phone</label>
-                  <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Enter Phone">
+                   <i style="color:red"th:errors="*{phone}"></i>
+                  <input th:field="*{phone}" type="text" class="form-control"  placeholder="Enter Phone">
                 </div>
                  <div class="form-group">
                   <label for="exampleInputPassword1">Email</label>
-                  <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Enter Email">
+                  <i style="color:red"th:errors="*{Email}"></i>
+                  <input th:field="*{Email}" type="text" class="form-control"  placeholder="Enter Email">
                 </div>
                  <div >
                   <label for="exampleInputPassword1">Role</label>
-                  <input type="radio" name="role"  id="exampleInputPassword1"> User
-                   <input type="radio"name="role"  id="exampleInputPassword1"> Admin
+                  <input th:field="*{admin}" type="radio" name="role"   value="false">User
+                   <input th:field="*{admin}" type="radio"name="role"   value="true">Admin
                 </div> 
               </div>
               <!-- /.box-body -->
-
+                      <i style="color:red" th:text="${tb}"></i>
+                      <i style="color:red" th:errors="*{id}"></i>
+                      <i style="color:red" th:text="${user}"></i>
               <div class="box-footer">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button class="btn btn-primary">Add</button>
               </div>
             </form>
           </div>
