--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -61,8 +61,8 @@
 												        <ul class="dropdown-menu">
 												          <li><a class="dropdown-item" href="/changePass">ChangePassword</a></li>
 												           <li><a class="dropdown-item" href="/editProfile">Edit profile</a></li>
-												          <li th:if="${#request.isUserInRole('ADMIN')}">
-                                      	                         <a th:href="@{/admin/accounts}">Administration</a>
+												          <li th:if="${#request.isUserInRole('true')}">
+                                      	                         <a th:href="@{/admin/user?edit=false}">Administration</a>
                                                                        </li>
 												          <li><hr class="dropdown-divider"></li>
 												          <li><a class="dropdown-item" th:href="@{/security/logout}">Logout</a></li>
