--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -61,14 +61,16 @@
 												        <ul class="dropdown-menu">
 												          <li><a class="dropdown-item" href="/changePass">ChangePassword</a></li>
 												           <li><a class="dropdown-item" href="/editProfile">Edit profile</a></li>
-												          <li th:if="${#request.isUserInRole('ADMIN')}">
+												            <li><a class="dropdown-item" th:href="@{/orderHistory}">Order History</a></li>
                                       	                         <a th:href="@{/admin/accounts}">Administration</a>
                                                                        </li>
+                                                                       
 												          <li><hr class="dropdown-divider"></li>
 												          <li><a class="dropdown-item" th:href="@{/security/logout}">Logout</a></li>
+												       
 												        </ul>
 												      </li>
-                                                         </div>
+                                                         
                                                          
                                                           <div th:unless="${#request.remoteUser}">
                                                            <li> <a class="nav-link dropdown" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
@@ -85,7 +87,7 @@
 					
 												        </ul>
 												      </li>
-                                                         
+                                                         </div>
                                                      </div>
                                                 </ul>
                                             </div>   
