--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -61,13 +61,12 @@
 												        <ul class="dropdown-menu">
 												          <li><a class="dropdown-item" href="/changePass">ChangePassword</a></li>
 												           <li><a class="dropdown-item" href="/editProfile">Edit profile</a></li>
-<<<<<<< HEAD
-												            <li><a class="dropdown-item" th:href="@{/orderHistory}">Order History</a></li>
-                                      	                         <a th:href="@{/admin/accounts}">Administration</a>
-=======
+
+												           <li><a class="dropdown-item" th:href="@{/orderHistory}">Order History</a></li>
+
 												          <li th:if="${#request.isUserInRole('true')}">
                                       	                         <a th:href="@{/admin/user?edit=false}">Administration</a>
->>>>>>> branch 'master' of https://github.com/kki3366/DATN_Normal.git
+
                                                                        </li>
                                                                        
 												          <li><hr class="dropdown-divider"></li>
@@ -119,8 +118,11 @@
                                                         <button type="submit"><i class="fa fa-search"></i></button>
                                                     </form>
                                                 </div>
-                                                <div class="shopping_cart">
-                                                </div>
+                                            <div class="shopping_cart">
+                                                <a href="/cart"><i class="fa fa-shopping-cart"></i> 2Items - $209.44 <i class="fa fa-angle-down"></i></a>
+
+                                              
+                                            </div>
 
                                             </div>
                                         </div>
