--- a/Normal_DATN/src/main/resources/templates/nguoiDung/cart.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/cart.html
@@ -29,12 +29,12 @@
 
 
                          <!--shopping cart area start -->
-                          <form th:action="@{/updateCart}" th:method="post"  > 
+                        
                         <div class="shopping_cart_area">
                            
                                     <div class="row">
                                         <div class="col-12">
-                                            <div class="table_desc">
+                                            <div  class="table_desc">
                                             
                                       
                                             
@@ -53,25 +53,28 @@
                                                 </thead>
                                                 <tbody >
                                                     <tr th:each="HoLy:${item}">
-                                                           <input type="hidden" name="idcart" th:value="${HoLy.id}">
+                                                        
                                                        <td class="product_remove"><a th:href="@{|/deleteCart/${HoLy.id}|}"><i class="fa fa-trash-o"></i></a></td>
                                                         <td class="product_thumb"><a href="#"><img  th:src="@{|assets/img/product/${HoLy.imgProductCart}|}"  alt=""></a></td>
                                                         <td class="product_name"><a href="#"> [[${HoLy.nameProductCart}]]</a></td>
                                                         <td class="product-price">[[${HoLy.priceProductCart}*1]]</td>
+                                                        <form th:action="@{/updateCart}" th:method="post"  > 
                                                         <td class="product_quantity"><input name="qty"  min="1" max="100" type="number" th:value="${HoLy.quanlityProductCart}" ></td>
                                                         <td class="product_total">[[${HoLy.priceProductCart * HoLy.quanlityProductCart}*1]]</td>
-
-
-                                                    </tr>
+    <div class="cart_submit">   
+ <td> <button type="submit" th:formaction="@{|/updateCart?idcart=${HoLy.id}|}">update cart</button> </td>
+ </div>
+                                                      </form>  </tr>
                                               
                                                  
                                                 </tbody>
                                             </table>   
                                                 </div>  
-                                                <div class="cart_submit">
-                                           
-                                                 
-                                              <button>update cart<button>
+                                                   <div class="cart_submit">                                              
+                                                    <button><a th:href="@{/clearCart}" >Clear cart</a></button>   
+                                                     <a th:href="@{/clearCart}" ><input type="button" onclick="alert('Đã clear')" value="Clear cart"></a>                                          
+                                                  
+                                                </div>   
                                                 </div>   
                                                      
                                              
@@ -97,6 +100,7 @@
                                                     <div class="coupon_inner">
                                                        <div class="cart_subtotal">
                                                            <p>Subtotal</p>
+                                                           
                                                            <p class="cart_amount">[[${tongTien}*1]]</p>
                                                        </div>
                                                        <div class="cart_subtotal ">
@@ -120,7 +124,7 @@
                                     <!--coupon code area end-->
                             
                          </div>
-                             </form> 
+                          
                          <!--shopping cart area end -->
 
    
